--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -81,7 +81,7 @@ jobs:
         id: update-env-variables
         shell: bash
         run: |
-          echo "TF_VAR_WORKERS_SCRIPT_PATH=../../${{ steps.build-api.outputs.API_SCRIPT_PATH }}" >> $GITHUB_ENV
+          echo "TF_VAR_WORKERS_SCRIPT_PATH=../../apps/api/dist/index.js" >> $GITHUB_ENV
 
       - name: Terraform Plan
         id: terraform-plan
