--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,9 @@ jobs:
   deploy-production-apps:
     environment: production
     env:
-      BRANCH_NAME: 'production'
+      INFRA_DIR: 'packages/infra'
+      WEBSITE_DIR: 'apps/marketing'
+      API_DIR: 'apps/api'
 
     name: Deploy production infra
     runs-on: ubuntu-latest
@@ -22,26 +24,71 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set env variables
+        id: set-env-variables
         uses: ./.github/actions/set-env-variables
         with:
-          BRANCH_NAME: ${{ env.BRANCH_NAME }}
+          BRANCH_NAME: 'production'
           API_URL: ${{ vars.API_URL }}
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          ENVIRONMENT: ${{ vars.ENVIRONMENT }}
           WEBSITE_URL: ${{ vars.WEBSITE_URL }}
-          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          AWS_ENDPOINT_URL_S3: ${{ secrets.AWS_ENDPOINT_URL_S3 }}
-          CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
-          SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-
-      - name: Deploy terraform
-        uses: ./.github/actions/deploy-terraform
-        with:
-          BRANCH_NAME: ${{ env.BRANCH_NAME }}
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          WEBSITE_URL: ${{ vars.WEBSITE_URL }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ENDPOINT_URL_S3: ${{ secrets.AWS_ENDPOINT_URL_S3 }}
           ENVIRONMENT: ${{ vars.ENVIRONMENT }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
+
+      - name: Setup Terraform
+        id: setup-terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Terraform Init
+        id: terraform-init
+        run: terraform init
+        shell: bash
+        working-directory: ${{ env.INFRA_DIR }}
+
+      - name: Terraform Workspace Select
+        id: terraform-workspace-select
+        shell: bash
+        working-directory: ${{ env.INFRA_DIR }}
+        run: terraform workspace select -or-create=true ${{ steps.set-env-variables.outputs.NORMALIZED_BRANCH_NAME }}
+
+      - name: Terraform Format
+        id: terraform-format
+        run: terraform fmt -check
+        shell: bash
+        working-directory: ${{ env.INFRA_DIR }}
+
+      - name: Build api
+        id: build-api
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: deploy --name api-${{ steps.set-env-variables.outputs.NORMALIZED_BRANCH_NAME }} --dry-run --minify --outdir dist
+          workingDirectory: ${{ env.API_DIR }}
+
+      - name: Update env variables
+        id: update-env-variables
+        shell: bash
+        run: |
+          echo "TF_VAR_WORKERS_SCRIPT_PATH=../../${{ env.API_DIR }}/dist/index.js" >> $GITHUB_ENV
+
+      - name: Terraform Plan
+        id: terraform-plan
+        run: terraform plan -input=false
+        shell: bash
+        working-directory: ${{ env.INFRA_DIR }}
+
+      - name: Terraform Apply
+        id: terraform-apply
+        shell: bash
+        working-directory: ${{ env.INFRA_DIR }}
+        run: terraform apply -auto-approve -input=false
+
+      - name: Build frontend
+        run: npm run build-ci
+        shell: bash
