--- a/.github/workflows/create-preview.yml
+++ b/.github/workflows/create-preview.yml
@@ -6,12 +6,14 @@ on:
       - main
     types:
       - opened
+      - synchronize
+      - reopened
     tags-ignore:
       - 'dependencies'
 
   workflow_run:
     workflows:
-      - Lint
+      - Lint dependencies update
     types:
       - completed
 
@@ -129,11 +131,13 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
+            const isPullRequest = context.eventName === 'pull_request'
+            const issueNumber = isPullRequest ? context.issue.number : context.payload.workflow_run.pull_requests[0].number
             // 1. Retrieve existing bot comments for the PR
             const { data: comments } = await github.rest.issues.listComments({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: context.payload.workflow_run.pull_requests[0].number
+              issue_number: issueNumber
             })
             const botComment = comments.find(comment => {
               return comment.user.type === 'Bot' && comment.body.includes('Preview URL')
@@ -155,7 +159,7 @@ jobs:
               })
             } else {
               github.rest.issues.createComment({
-                issue_number: context.payload.workflow_run.pull_requests[0].number,
+                issue_number: issueNumber,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 body: output
@@ -163,7 +167,7 @@ jobs:
             }
 
             github.rest.issues.addLabels({
-                issue_number: context.payload.workflow_run.pull_requests[0].number,
+                issue_number: issueNumber,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 labels: ['preview']
