--- a/.github/workflows/remove-preview.yml
+++ b/.github/workflows/remove-preview.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Set env variables
         uses: ./.github/actions/set-env-variables
         with:
-          BRANCH_NAME: ${{ github.head_ref }}
+          BRANCH_NAME: ${{ inputs.branch_name || github.head_ref }}
           API_URL: ${{ vars.API_URL }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
