chore(workflow): update remove staging

--- a/.github/workflows/delete-staging-resources.yml
+++ b/.github/workflows/delete-staging-resources.yml
@@ -16,6 +16,9 @@ jobs:
       WEBSITE_DIR: 'apps/marketing'
       API_DIR: 'apps/api'
 
+    name: Delete staging resources
+    runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
