chore(workflow): update remove staging

--- a/.github/workflows/delete-staging-resources.yml
+++ b/.github/workflows/delete-staging-resources.yml
@@ -1,6 +1,6 @@
 name: 'Delete staging resources'
 
-concurrency: delete-staging-resources
+concurrency: staging-resources
 
 on:
   workflow_dispatch:
