--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"supabase:stop": "npm run stop --workspace=packages/supabase",
 		"supabase:gen": "npm run gen --workspace=packages/supabase",
 		"supabase:reset": "npm run reset --workspace=packages/supabase",
-		"supabase:migrate": "mnpm run igrate --workspace=packages/supabase",
+		"supabase:migrate": "npm run igrate --workspace=packages/supabase",
 		"supabase:seed": "npm run run seed --workspace=packages/supabase",
 		"lint": "biome check .",
 		"lint:fix": "biome check . --write",
